--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,16 +43,15 @@
         <div class="Novedades">
             <h1>Recibí todas nuestras ofertas</h1>
             <p>¿Quieres recibir nuestras ofertas? ¡Registrate ya mismo y comenzá a disfrutarlas!</p>
-            <form>
-                <label for="email">Suscríbete</label>
-                <input type="email" id="emaillNovedades">
+            <form class="suscripcion">
+                <input type="email" id="emaillNovedades" placeholder="felicitas@gmail.com">
+                <input type="submit" value="Suscribir">
             </form>
         </div>
 
-        <section>
-            <h1>Contacto</h1>
-
-            <form>
+        <h1 class="contacto">Contacto</h1>
+        <section id="grilla-contacto">
+            <form class="datos">
                 <label for="nombre">Nombre</label>
                 <input type="text" id="nombre">
 
@@ -67,7 +66,9 @@
 
                 <input type="submit" value="Enviar">
             </form>
+
+            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52523.673602661984!2d-58.793763477435306!3d-34.347261001769866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb61ad1ddf8915%3A0x70f239e49e8c37af!2sBel%C3%A9n%20de%20Escobar%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1684697405380!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52523.673602661984!2d-58.793763477435306!3d-34.347261001769866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb61ad1ddf8915%3A0x70f239e49e8c37af!2sBel%C3%A9n%20de%20Escobar%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1684697405380!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
 </body>
 </html>
