--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <header> 
         <section class="banner">
             <div class="publicidad">ENVIOS A TODO EL PAIS - 6 CUOTAS SIN INTERÉS - 15% OFF CON TRANSFERENCIA</div>
-            <div class="header">
+             <a href="index.html">
                 <img src="img/logo.png" alt="logo" class="logo">
+             </a>   
                 <nav>
                     <ul class="menu">
                         <li>
@@ -34,9 +35,10 @@
                         </li>
                     </ul>
                 </nav>
-                <img src="img/bolsa-de-compra.png" alt="carrito" class="carrito">
-            </div>
-        </section>
+                <div class="bolsa">
+                    <img src="img/bolsa-de-compra.png" alt="carrito" class="carrito">
+                </div>  
+            </section>
     </header>
 
     <img src="img/portada.jpg" alt="imagenPrincipal" class="imagenPrincipal">
