Actualización  de header y main.css

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,35 +10,36 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <header>
+    <header> 
         <section class="banner">
-           <div class="publicidad">ENVIOS A TODO EL PAIS - 6 CUOTAS SIN INTERÉS - 15% OFF CON TRANSFERENCIA</div>
-               <div class="header">
-               <img src="../img/logo.png" alt="logo" class="logo">
-       
-               <nav>
-                   <ul class="menu">
-                       <li>
-                           <a href="../index.html">Inicio</a>
-                       </li>
-                       <li>
-                           <a href="productos.html">Productos</a>
-                       </li>
-                       <li>
-                           <a href="accesorios.html">Accesorios</a>
-                       </li>
-                       <li>
-                           <a href="como-comprar.html">Como comprar</a>
-                       </li>
-                       <li>
-                           <a href="contacto.html">Contacto</a>
-                       </li>
-                   </ul>
-               </nav>
-               <img src="../img/bolsa-de-compra.png" alt="carrito" class="carrito">
-           </div>
-       </section>
-   </header>
+            <div class="publicidad">ENVIOS A TODO EL PAIS - 6 CUOTAS SIN INTERÉS - 15% OFF CON TRANSFERENCIA</div>
+             <a href="index.html">
+                <img src="../img/logo.png" alt="logo" class="logo">
+             </a>   
+                <nav>
+                    <ul class="menu">
+                        <li>
+                            <a href="../index.html">Inicio</a>
+                        </li>
+                        <li>
+                            <a href="productos.html">Productos</a>
+                        </li>
+                        <li>
+                            <a href="accesorios.html">Accesorios</a>
+                        </li>
+                        <li>
+                            <a href="como-comprar.html">Como comprar</a>
+                        </li>
+                        <li>
+                            <a href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="bolsa">
+                    <img src="../img/bolsa-de-compra.png" alt="carrito" class="carrito">
+                </div>  
+            </section>
+    </header>
 
         <div class="Novedades">
             <h1>Recibí todas nuestras ofertas</h1>
