--- a/pages/productos.html
+++ b/pages/productos.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <header>
-         <section class="banner">
+    <header> 
+        <section class="banner">
             <div class="publicidad">ENVIOS A TODO EL PAIS - 6 CUOTAS SIN INTERÉS - 15% OFF CON TRANSFERENCIA</div>
-                <div class="header">
+             <a href="index.html">
                 <img src="../img/logo.png" alt="logo" class="logo">
+             </a>   
                 <nav>
                     <ul class="menu">
                         <li>
@@ -34,9 +35,10 @@
                         </li>
                     </ul>
                 </nav>
-                <img src="../img/bolsa-de-compra.png" alt="carrito" class="carrito">
-            </div>
-        </section>
+                <div class="bolsa">
+                    <img src="../img/bolsa-de-compra.png" alt="carrito" class="carrito">
+                </div>  
+            </section>
     </header>
 
     <div class="compras">
