Ajustes en contacto.html

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,7 +45,7 @@
             <h1>Recibí todas nuestras ofertas</h1>
             <p>¿Quieres recibir nuestras ofertas? ¡Registrate ya mismo y comenzá a disfrutarlas!</p>
             <form class="suscripcion">
-                <input type="email" id="emaillNovedades" placeholder="felicitas@gmail.com">
+                <input type="email" id="emaillNovedades">
                 <input type="submit" value="Suscribir">
             </form>
         </div>
