adaptación mobile para index.html

--- a/index.html
+++ b/index.html
@@ -66,23 +66,23 @@
     </section>
 
     <div class="adicionales">
-        <section>
+        <div>
             <img src="img/tarjeta-de-credito.png" alt="aceptamos pago online">
-            <h2>6 cuotas sin interés</h2>
+            <h3>6 cuotas sin interés</h3>
             CON TODAS LAS TARJETAS
-        </section>
+        </div>
 
-        <section>
+        <div>
             <img src="img/ruta.png" alt="envios a todo el pais">
-            <h2>Envíos a todo el país</h2>
+            <h3>Envíos a todo el país</h3>
             RECIBILO DONDE ESTÉS
-        </section>
+        </div>
 
-        <section>
+        <div>
             <img src="img/caja-de-devolucion.png" alt="cambios">
-            <h2>Tus compras tienen cambio</h2>
+            <h3>Tus compras tienen cambio</h3>
             <h4>ESCRIBINOS POR WHATSAPP</h4>
-        </section>
+        </div>
     </div>         
         
     <footer class="redes">
